--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V3.57</h1>
+				<h1>Delivery Date Settings V3.58</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -268,6 +268,12 @@
 							}
 						}
 						krslog(JSON.stringify(dict));
+						$('.invsold').each(function() {		
+							var epoch = getEpochFromInvSold($(this));
+							var pid = getPidFromInvSold($(this));
+							$(this).val(dict[epoch][pid]);
+							
+						});
 					}
 				}
 			}
