--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.1</h1>
+				<h1>Delivery Date Settings V4.3</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -195,7 +195,8 @@
 			krslog(publicData);
 			// uncomment to load inventory code components
 			//loadSkuTable();	
-			loadBlockoutDates();
+			loadBlockoutDates();	
+			loadBlockoutScDates();
 		});
 	});
 	function getIdFromSkuButton(button){
