--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.3</h1>
+				<h1>Delivery Date Settings V4.4</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -186,6 +186,7 @@
 	$(document).ready(function(){
 		$( "#order_date" ).datepicker({dateFormat: "dd M yy"});
 		$( "#blockout_date" ).datepicker({dateFormat: "dd M yy"});
+		$( "#blockoutsc_date" ).datepicker({dateFormat: "dd M yy"});
 
 		//$( "#inventory_date" ).datepicker({dateFormat: "dd M yy"});
 
