--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.56</h1>
+				<h1>Delivery Date Settings V4.57</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -342,9 +342,9 @@
 							$tr.append($('<th>').text(date.toLocaleDateString()));
 						});
 						$tr.appendTo('#sku-sold-table');
-						for(var h = 0 ; h <  list_of_names.length; h++){
+						for(var h = 0 ; h <  list_of_name.length; h++){
 
-							var name = list_of_names[h];
+							var name = list_of_name[h];
 							krslog(name);
 							var $tr = $('<tr>').append($('<th>').text(name));
 							Object.keys(dict_of_epoch_to_pid).forEach(function(key) {
