--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.57</h1>
+				<h1>Delivery Date Settings V4.58</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -317,7 +317,7 @@
 								for(var j = 0 ; j <  orders_arr[h].items[i].items.length; j++){
 									var name =  orders_arr[h].items[i].items[j].name;
 									krslog(name);
-									if (!(list_of_name.includes(name)){
+									if (!(list_of_name.includes(name))){
 										list_of_name.push(name);
 									}		
 									if (!(epoch in dict_of_epoch_to_pid)){
