--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.58</h1>
+				<h1>Delivery Date Settings V4.59</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -130,7 +130,7 @@
 				<h3>SKU Sold</h3>
 
 				<div class="form-area__content">
-					<table id="sku-sold-table">
+					<table style="border:1px solid black" id="sku-sold-table">
 					</table>
 				</div>
 				
