--- a/test.html
+++ b/test.html
@@ -130,7 +130,7 @@
 				<h3>SKU Sold</h3>
 
 				<div class="form-area__content">
-					<table style="border:1px solid black" id="sku-sold-table">
+					<table id="sku-sold-table">
 					</table>
 				</div>
 				
