--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.513</h1>
+				<h1>Delivery Date Settings V4.514</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -128,7 +128,7 @@
 				</div>
 				
 				<h3>SKU Sold</h3>
-
+				<p> Tally of products ordered by date, only orders that are processing or awaiting processing are considered</p>
 				<div class="form-area__content">
 					<table id="sku-sold-table">
 					</table>
