--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.521</h1>
+				<h1>Delivery Date Settings V4.522</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -328,7 +328,8 @@
 									dict_of_epoch_to_pid[epoch][name] +=  orders_arr[h].items[i].items[j].quantity 
 									if (typeof orders_arr[h].items[i].items[j].selectedOptions !== 'undefined'){
 										for(var k = 0 ; k < orders_arr[h].items[i].items[j].selectedOptions.length ; k++){
-											var selectedOptionName = orders_arr[h].items[i].items[j].selectedOptions[k]	
+											var selectedOptionName = orders_arr[h].items[i].items[j].selectedOptions[k].name + " " 
+											= orders_arr[h].items[i].items[j].selectedOptions[k].value;	
 											if (!(list_of_name.includes(selectedOptionName))){
 												list_of_name.push(selectedOptionName);
 											}	
