--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.529</h1>
+				<h1>Delivery Date Settings V4.530</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -328,15 +328,16 @@
 									dict_of_epoch_to_pid[epoch][name] +=  orders_arr[h].items[i].items[j].quantity 
 									if (typeof orders_arr[h].items[i].items[j].selectedOptions !== 'undefined'){
 										for(var k = 0 ; k < orders_arr[h].items[i].items[j].selectedOptions.length ; k++){
-											var selectedOptionName = orders_arr[h].items[i].items[j].selectedOptions[k].name + " " + orders_arr[h].items[i].items[j].selectedOptions[k].value;	
-											if (!(list_of_name.includes(selectedOptionName))){
-												list_of_name.push(selectedOptionName);
-											}	
-											if (!(selectedOptionName in dict_of_epoch_to_pid[epoch])){
-												dict_of_epoch_to_pid[epoch][selectedOptionName]= 0	
+											if (orders_arr[h].items[i].items[j].selectedOptions[k].selections[0].selectionModifier > 0){
+												var selectedOptionName = orders_arr[h].items[i].items[j].selectedOptions[k].name + " " + orders_arr[h].items[i].items[j].selectedOptions[k].value;	
+												if (!(list_of_name.includes(selectedOptionName))){
+													list_of_name.push(selectedOptionName);
+												}	
+												if (!(selectedOptionName in dict_of_epoch_to_pid[epoch])){
+													dict_of_epoch_to_pid[epoch][selectedOptionName]= 0	
+												}
+												dict_of_epoch_to_pid[epoch][selectedOptionName] += 1
 											}
-											dict_of_epoch_to_pid[epoch][selectedOptionName] += 1
-											
 										}	
 									}
 									krslog("fuck");
