--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.7</h1>
+				<h1>Delivery Date Settings V4.8</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -329,7 +329,7 @@
 									if (typeof orders_arr[h].items[i].items[j].selectedOptions !== 'undefined'){
 										for(var k = 0 ; k < orders_arr[h].items[i].items[j].selectedOptions.length ; k++){
 
-											var selectedOptionName = orders_arr[h].items[i].items[j].selectedOptions[k].name + " " + orders_arr[h].items[i].items[j].selectedOptions[k].value;	
+											var selectedOptionName = name + ", " + orders_arr[h].items[i].items[j].selectedOptions[k].name + " " + orders_arr[h].items[i].items[j].selectedOptions[k].value;	
 											if (!(list_of_name.includes(selectedOptionName))){
 												list_of_name.push(selectedOptionName);
 											}	
