--- a/test.html
+++ b/test.html
@@ -38,6 +38,11 @@
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css">
   <!-- Include Ecwid CSS Framework -->
   <link rel="stylesheet" href="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.css"/>  
+	<style>
+		.tablealtrow {
+		    background-color: #eef6fa;
+		}
+	</style>
 </head>
 
 <body class='normalized'>
@@ -46,7 +51,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.8</h1>
+				<h1>Delivery Date Settings V4.9</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -207,6 +212,7 @@
 			loadBlockoutDates();	
 			loadBlockoutScDates();
 			loadSkuSoldTable();
+			
 		});
 	});
 	function getIdFromSkuButton(button){
@@ -411,6 +417,14 @@
 
 							
 						}
+						// Make Alt row blue
+						var h = 0;
+						$("#sku-sold-table tr").each(function() {
+							if(h % 2 == 0){
+								$(this).addClass('tablealtrow');
+							}
+							h++;
+						});
 						
 
 
