--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V4.9</h1>
+				<h1>Delivery Date Settings V5</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -362,6 +362,9 @@
 						    	/* do something with key & value here */
 							sorted_dict_of_epoch_to_pid[key] = value;
 						} 
+						// Sort list of name
+						list_of_name.sort();
+						
 						krslog(JSON.stringify(sorted_dict_of_epoch_to_pid));
 						// Setup headers
 						
