--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V5.2</h1>
+				<h1>Delivery Date Settings V5.3</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -386,7 +386,7 @@
 								$tr.append($('<th>').append($a.append($button)));	
 							}
 							else{
-								$tr.append($('<th>No Date</th>')
+								$tr.append($('<th>No Date</th>'));
 								
 							}
 							
