--- a/test.html
+++ b/test.html
@@ -386,7 +386,7 @@
 								$tr.append($('<th>').append($a.append($button)));	
 							}
 							else{
-								$tr.append($('<th>Not Delivery or Self Collect</th>'));
+								$tr.append($('<th>No Delivery Date</th>'));
 								
 							}
 							
