--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V5.3</h1>
+				<h1>Delivery Date Settings V5.4</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -307,8 +307,10 @@
 						for (var h = 0 ; h < orders_arr.length ; h++){
 							for (var i = 0 ; i < orders_arr[h].items.length ; i++){
 								krslog("Processing " + orders_arr[h].items[i].id);
-								if (typeof orders_arr[h].items[i].extraFields.ecwid_order_delivery_time_interval_end !== 'undefined'){
-									var date = new Date( orders_arr[h].items[i].extraFields.ecwid_order_delivery_time_interval_end);
+								if (typeof orders_arr[h].items[i].extraFields !== 'undefined'){
+									if (typeof orders_arr[h].items[i].extraFields.ecwid_order_delivery_time_interval_end !== 'undefined'){
+										var date = new Date( orders_arr[h].items[i].extraFields.ecwid_order_delivery_time_interval_end);
+									}
 								}
 								else if (typeof orders_arr[h].items[i].pickupTime !== 'undefined'){
 									var date = new Date( orders_arr[h].items[i].pickupTime);
